Update generated content

--- a/home.html
+++ b/home.html
@@ -179,6 +179,33 @@
     ]
   },
   {
+    "title": "Ông Zelensky: Ông Putin trì hoãn ngừng bắn, muốn tiếp tục cuộc chiến",
+    "content": "Trong bài phát biểu gần đây, Tổng thống Ukraine Volodymyr Zelensky cho rằng Tổng thống Nga Vladimir Putin đang trì hoãn lệnh ngừng bắn 30 ngày do Mỹ đề xuất. Ông Zelensky nhấn mạnh rằng Nga đã đặt ra nhiều điều kiện khó khăn để làm phức tạp quá trình ngừng bắn và rằng Putin không có ý định chấm dứt cuộc chiến. Trong khi đó, Putin bày tỏ những lo ngại về việc thực hiện thỏa thuận ngừng bắn, nhấn mạnh rằng quân đội Nga đang có đà tiến và việc tạm dừng có thể gây bất lợi cho họ.",
+    "link": "https://dantri.com.vn/the-gioi/ong-zelensky-ong-putin-tri-hoan-ngung-ban-muon-tiep-tuc-cuoc-chien-20250314041714541.htm",
+    "cat": "the-gioi",
+    "positivity": 2,
+    "importance": 9,
+    "question": "Ông Zelensky nói gì về lệnh ngừng bắn với Nga?",
+    "answers": [
+      {
+        "text": "Ông Zelensky cho rằng ông Putin đang trì hoãn lệnh ngừng bắn.",
+        "correct": true
+      },
+      {
+        "text": "Ông Zelensky ủng hộ lệnh ngừng bắn ngay lập tức.",
+        "correct": false
+      },
+      {
+        "text": "Ông Zelensky yêu cầu Nga chấm dứt mọi hoạt động quân sự.",
+        "correct": false
+      },
+      {
+        "text": "Ông Zelensky tuyên bố rằng Nga đã đồng ý ngừng bắn.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Hút thuốc, hai anh em mắc ung thư phổi",
     "content": "Hai anh em 49 và 56 tuổi ở Hà Nội, có thói quen hút một bao thuốc lá mỗi ngày, đã mắc ung thư phổi. Người em phát hiện bệnh giai đoạn cuối và đã qua đời sau một năm điều trị. Kết quả tầm soát sức khỏe của người anh cho thấy ông cũng bị ung thư phổi, nguyên nhân chủ yếu do khói thuốc lá. Bác sĩ khuyến cáo người dân nên tầm soát ung thư phổi định kỳ, đặc biệt là những người có nguy cơ cao.",
     "link": "https://vnexpress.net/hut-thuoc-hai-anh-em-mac-ung-thu-phoi-4860498.html",
@@ -237,33 +264,6 @@
     ]
   },
   {
-    "title": "Làng du lịch sinh thái Pơ mu xuống cấp",
-    "content": "Làng du lịch sinh thái Pơ Mu, nằm ở huyện Tây Giang, Quảng Nam, hiện đang trong tình trạng xuống cấp nghiêm trọng. Mặc dù được xây dựng từ năm 2016 với 10 ngôi nhà sàn truyền thống nhằm phát triển du lịch cộng đồng, nhưng sau gần 10 năm, các ngôi nhà đã hư hỏng, không có người trông coi và không còn hoạt động. Dự án nâng cấp và cải tạo làng du lịch này đã được phê duyệt với kinh phí hơn 6 tỷ đồng, dự kiến hoàn thành vào năm 2026.",
-    "link": "https://vnexpress.net/lang-du-lich-sinh-thai-po-mu-xuong-cap-4860923.html",
-    "cat": "du-lich",
-    "positivity": 4,
-    "importance": 7,
-    "question": "Tại sao làng du lịch sinh thái Pơ Mu lại xuống cấp?",
-    "answers": [
-      {
-        "text": "Vì không có người trông coi và hoạt động du lịch đã ngừng lại.",
-        "correct": true
-      },
-      {
-        "text": "Do thời tiết khắc nghiệt.",
-        "correct": false
-      },
-      {
-        "text": "Vì thiếu đầu tư từ chính quyền.",
-        "correct": false
-      },
-      {
-        "text": "Do không có khách du lịch đến thăm.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Đầu tư gần 7.000 tỷ đồng làm đường nối cao tốc với Phan Thiết",
     "content": "Dự án đường kết nối cao tốc Bắc Nam đến trung tâm Phan Thiết dài 11,4 km với tổng vốn gần 7.000 tỷ đồng đã được phê duyệt. Tuyến đường này sẽ giúp mở rộng không gian phát triển cho đô thị biển Phan Thiết, tạo thuận lợi cho giao thông và kết nối với các khu vực lân cận. Dự kiến, dự án sẽ khởi công vào giữa năm 2027 và hoàn thành vào quý 4/2028, góp phần quan trọng trong việc phát triển hạ tầng giao thông tại Bình Thuận.",
     "link": "https://vnexpress.net/dau-tu-gan-7-000-ty-dong-lam-duong-noi-cao-toc-voi-phan-thiet-4861016.html",
@@ -286,6 +286,33 @@
       },
       {
         "text": "Khoảng 10.000 tỷ đồng",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Làng du lịch sinh thái Pơ mu xuống cấp",
+    "content": "Làng du lịch sinh thái Pơ Mu, nằm ở huyện Tây Giang, Quảng Nam, hiện đang trong tình trạng xuống cấp nghiêm trọng. Mặc dù được xây dựng từ năm 2016 với 10 ngôi nhà sàn truyền thống nhằm phát triển du lịch cộng đồng, nhưng sau gần 10 năm, các ngôi nhà đã hư hỏng, không có người trông coi và không còn hoạt động. Dự án nâng cấp và cải tạo làng du lịch này đã được phê duyệt với kinh phí hơn 6 tỷ đồng, dự kiến hoàn thành vào năm 2026.",
+    "link": "https://vnexpress.net/lang-du-lich-sinh-thai-po-mu-xuong-cap-4860923.html",
+    "cat": "du-lich",
+    "positivity": 4,
+    "importance": 7,
+    "question": "Tại sao làng du lịch sinh thái Pơ Mu lại xuống cấp?",
+    "answers": [
+      {
+        "text": "Vì không có người trông coi và hoạt động du lịch đã ngừng lại.",
+        "correct": true
+      },
+      {
+        "text": "Do thời tiết khắc nghiệt.",
+        "correct": false
+      },
+      {
+        "text": "Vì thiếu đầu tư từ chính quyền.",
+        "correct": false
+      },
+      {
+        "text": "Do không có khách du lịch đến thăm.",
         "correct": false
       }
     ]
@@ -964,33 +991,6 @@
     ]
   },
   {
-    "title": "Mặt mưng mủ sau cấy mỡ tạo 'má baby'",
-    "content": "Một phụ nữ 35 tuổi đã gặp phải tình trạng nhiễm trùng và mủ sau khi cấy mỡ tự thân vào má tại một spa. Các bác sĩ tại Bệnh viện Bạch Mai đã chẩn đoán và điều trị bằng kháng sinh cùng với việc dẫn lưu dịch mủ. Cơ sở y tế khuyến cáo mọi người chỉ nên thực hiện các thủ thuật thẩm mỹ tại những nơi được cấp phép để tránh nguy cơ biến chứng nguy hiểm.",
-    "link": "https://vnexpress.net/mat-mung-mu-sau-cay-mo-tao-ma-baby-4860892.html",
-    "cat": "suc-khoe",
-    "positivity": 3,
-    "importance": 7,
-    "question": "Tại sao người phụ nữ 35 tuổi phải nhập viện sau khi cấy mỡ?",
-    "answers": [
-      {
-        "text": "Vì bị nhiễm trùng và xuất hiện mủ dưới da.",
-        "correct": true
-      },
-      {
-        "text": "Vì gặp phải dị ứng với thuốc gây mê.",
-        "correct": false
-      },
-      {
-        "text": "Vì không thích kết quả thẩm mỹ.",
-        "correct": false
-      },
-      {
-        "text": "Vì cần phải nghỉ ngơi sau khi làm đẹp.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "4 dưỡng chất tăng miễn dịch trẻ nên ăn mỗi ngày",
     "content": "Bài viết nêu bật bốn dưỡng chất quan trọng giúp tăng cường hệ miễn dịch cho trẻ, bao gồm kẽm, vitamin C, chất chống oxy hóa và axit béo omega-3. Những dưỡng chất này giúp trẻ phát triển tốt, giảm nguy cơ mắc bệnh, đặc biệt là khi thời tiết thay đổi. Cha mẹ được khuyến khích cho trẻ ăn đa dạng thực phẩm chứa các chất dinh dưỡng này để hỗ trợ sức khỏe và đề kháng của trẻ.",
     "link": "https://vnexpress.net/4-duong-chat-tang-mien-dich-tre-nen-an-moi-ngay-4860801.html",
@@ -1040,6 +1040,33 @@
       },
       {
         "text": "Vaccine HPV chỉ dành cho nam giới.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Mặt mưng mủ sau cấy mỡ tạo 'má baby'",
+    "content": "Một phụ nữ 35 tuổi đã gặp phải tình trạng nhiễm trùng và mủ sau khi cấy mỡ tự thân vào má tại một spa. Các bác sĩ tại Bệnh viện Bạch Mai đã chẩn đoán và điều trị bằng kháng sinh cùng với việc dẫn lưu dịch mủ. Cơ sở y tế khuyến cáo mọi người chỉ nên thực hiện các thủ thuật thẩm mỹ tại những nơi được cấp phép để tránh nguy cơ biến chứng nguy hiểm.",
+    "link": "https://vnexpress.net/mat-mung-mu-sau-cay-mo-tao-ma-baby-4860892.html",
+    "cat": "suc-khoe",
+    "positivity": 3,
+    "importance": 7,
+    "question": "Tại sao người phụ nữ 35 tuổi phải nhập viện sau khi cấy mỡ?",
+    "answers": [
+      {
+        "text": "Vì bị nhiễm trùng và xuất hiện mủ dưới da.",
+        "correct": true
+      },
+      {
+        "text": "Vì gặp phải dị ứng với thuốc gây mê.",
+        "correct": false
+      },
+      {
+        "text": "Vì không thích kết quả thẩm mỹ.",
+        "correct": false
+      },
+      {
+        "text": "Vì cần phải nghỉ ngơi sau khi làm đẹp.",
         "correct": false
       }
     ]
@@ -1184,33 +1211,6 @@
     ]
   },
   {
-    "title": "Ronaldo bị hắt hủi trong cuộc đua Chủ tịch",
-    "content": "Cựu danh thủ Ronaldo Nazario đã rút lui khỏi cuộc đua tranh chức Chủ tịch LĐBĐ Brazil (CBF) do không nhận được sự ủng hộ từ các địa phương. Mặc dù ông đã tuyên bố tranh cử từ tháng 12/2024 với mong muốn khôi phục uy tín cho bóng đá Brazil, nhưng chỉ có 4 trong 27 Liên đoàn địa phương ủng hộ ông. Với quyết định này, Rodrigues có khả năng trở thành ứng cử viên duy nhất trong cuộc bầu cử sắp tới.",
-    "link": "https://vnexpress.net/ronaldo-bi-hat-hui-trong-cuoc-dua-chu-tich-4860872.html",
-    "cat": "the-thao",
-    "positivity": 3,
-    "importance": 7,
-    "question": "Tại sao Ronaldo Nazario rút lui khỏi cuộc đua Chủ tịch LĐBĐ Brazil?",
-    "answers": [
-      {
-        "text": "Vì không được các Liên đoàn địa phương ủng hộ",
-        "correct": true
-      },
-      {
-        "text": "Vì ông muốn tập trung vào sự nghiệp cầu thủ",
-        "correct": false
-      },
-      {
-        "text": "Vì ông không đủ điều kiện tài chính",
-        "correct": false
-      },
-      {
-        "text": "Vì ông đã đạt được nhiều thành công trong sự nghiệp",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Amorim: 'Man Utd bị Ratcliffe chê là đúng'",
     "content": "HLV Ruben Amorim của Man Utd đã thừa nhận rằng ông và đội bóng không đạt phong độ tốt trong mùa giải này, sau khi bị đồng sở hữu Jim Ratcliffe chỉ trích. Ratcliffe cho rằng nhiều cầu thủ của Man Utd nhận lương cao nhưng không đủ chất lượng để thi đấu hiệu quả. Amorim cũng cho biết ông không phàn nàn về những bình luận của Ratcliffe và cam kết sẽ cải thiện kết quả của đội bóng.",
     "link": "https://vnexpress.net/amorim-man-utd-bi-ratcliffe-che-la-dung-4860857.html",
@@ -1260,6 +1260,33 @@
       },
       {
         "text": "Ngân hàng Phát triển Châu Á",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Ronaldo bị hắt hủi trong cuộc đua Chủ tịch",
+    "content": "Cựu danh thủ Ronaldo Nazario đã rút lui khỏi cuộc đua tranh chức Chủ tịch LĐBĐ Brazil (CBF) do không nhận được sự ủng hộ từ các địa phương. Mặc dù ông đã tuyên bố tranh cử từ tháng 12/2024 với mong muốn khôi phục uy tín cho bóng đá Brazil, nhưng chỉ có 4 trong 27 Liên đoàn địa phương ủng hộ ông. Với quyết định này, Rodrigues có khả năng trở thành ứng cử viên duy nhất trong cuộc bầu cử sắp tới.",
+    "link": "https://vnexpress.net/ronaldo-bi-hat-hui-trong-cuoc-dua-chu-tich-4860872.html",
+    "cat": "the-thao",
+    "positivity": 3,
+    "importance": 7,
+    "question": "Tại sao Ronaldo Nazario rút lui khỏi cuộc đua Chủ tịch LĐBĐ Brazil?",
+    "answers": [
+      {
+        "text": "Vì không được các Liên đoàn địa phương ủng hộ",
+        "correct": true
+      },
+      {
+        "text": "Vì ông muốn tập trung vào sự nghiệp cầu thủ",
+        "correct": false
+      },
+      {
+        "text": "Vì ông không đủ điều kiện tài chính",
+        "correct": false
+      },
+      {
+        "text": "Vì ông đã đạt được nhiều thành công trong sự nghiệp",
         "correct": false
       }
     ]
@@ -3931,6 +3958,33 @@
     ]
   },
   {
+    "title": "Sản phụ mắc bệnh xương hóa đá hiếm gặp vượt cạn an toàn",
+    "content": "Chị Đinh Thanh Hương, 32 tuổi, mắc bệnh xương hóa đá hiếm gặp với tỷ lệ 1/200.000 người, đã vượt cạn an toàn nhờ sự theo dõi và hỗ trợ từ đội ngũ bác sĩ tại Bệnh viện Hồng Ngọc. Bệnh xương hóa đá khiến chị đối mặt với nhiều nguy cơ trong thai kỳ, nhưng nhờ vào kế hoạch chăm sóc cẩn thận và tư vấn tận tình, chị đã có một ca sinh nở thành công. Các bác sĩ đã thực hiện ca mổ với sự chính xác để đảm bảo an toàn cho cả mẹ và bé.",
+    "link": "https://vnexpress.net/san-phu-mac-benh-xuong-hoa-da-hiem-gap-vuot-can-an-toan-4859942.html",
+    "cat": "suc-khoe",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Chị Đinh Thanh Hương đã vượt cạn an toàn nhờ vào đâu?",
+    "answers": [
+      {
+        "text": "Sự theo dõi và hỗ trợ từ đội ngũ bác sĩ tại Bệnh viện Hồng Ngọc.",
+        "correct": true
+      },
+      {
+        "text": "Sự động viên từ gia đình.",
+        "correct": false
+      },
+      {
+        "text": "Chế độ dinh dưỡng hợp lý.",
+        "correct": false
+      },
+      {
+        "text": "Nhờ vào thuốc giảm đau hiệu quả.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Nồm ẩm làm tăng nguy cơ nhồi máu cơ tim",
     "content": "Thời tiết nồm ẩm có thể làm tăng nguy cơ nhồi máu cơ tim do ảnh hưởng đến sức khỏe tim mạch. Bác sĩ Nguyễn Tuấn Long cho biết, độ ẩm cao làm cơ thể phải làm việc nhiều hơn để duy trì nhiệt độ, dẫn đến căng thẳng cho hệ tim mạch. Số bệnh nhân nhồi máu cơ tim tại Bệnh viện Đa khoa Tâm Anh Hà Nội trong tháng 2 tăng gần 30% so với cùng kỳ năm ngoái, đặc biệt là ở những người có bệnh lý nền hoặc tuổi cao. Để giảm thiểu rủi ro, cần chú ý giữ ấm cơ thể và duy trì lối sống lành mạnh.",
     "link": "https://vnexpress.net/nom-am-lam-tang-nguy-co-nhoi-mau-co-tim-4860624.html",
@@ -3957,33 +4011,6 @@
       },
       {
         "text": "Nồm ẩm chỉ ảnh hưởng đến hệ hô hấp.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Sản phụ mắc bệnh xương hóa đá hiếm gặp vượt cạn an toàn",
-    "content": "Chị Đinh Thanh Hương, 32 tuổi, mắc bệnh xương hóa đá hiếm gặp với tỷ lệ 1/200.000 người, đã vượt cạn an toàn nhờ sự theo dõi và hỗ trợ từ đội ngũ bác sĩ tại Bệnh viện Hồng Ngọc. Bệnh xương hóa đá khiến chị đối mặt với nhiều nguy cơ trong thai kỳ, nhưng nhờ vào kế hoạch chăm sóc cẩn thận và tư vấn tận tình, chị đã có một ca sinh nở thành công. Các bác sĩ đã thực hiện ca mổ với sự chính xác để đảm bảo an toàn cho cả mẹ và bé.",
-    "link": "https://vnexpress.net/san-phu-mac-benh-xuong-hoa-da-hiem-gap-vuot-can-an-toan-4859942.html",
-    "cat": "suc-khoe",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Chị Đinh Thanh Hương đã vượt cạn an toàn nhờ vào đâu?",
-    "answers": [
-      {
-        "text": "Sự theo dõi và hỗ trợ từ đội ngũ bác sĩ tại Bệnh viện Hồng Ngọc.",
-        "correct": true
-      },
-      {
-        "text": "Sự động viên từ gia đình.",
-        "correct": false
-      },
-      {
-        "text": "Chế độ dinh dưỡng hợp lý.",
-        "correct": false
-      },
-      {
-        "text": "Nhờ vào thuốc giảm đau hiệu quả.",
         "correct": false
       }
     ]
@@ -4378,37 +4405,6 @@
       },
       {
         "text": "Vì thời gian diễn không cố định",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Quảng Ngãi kỷ niệm 80 năm Khởi nghĩa Ba Tơ",
-    "content": "Tỉnh Quảng Ngãi đã tổ chức lễ kỷ niệm 80 năm Khởi nghĩa Ba Tơ và 50 năm Ngày Giải phóng tỉnh vào tối 12/3, thu hút hàng nghìn người tham dự. Bí thư Tỉnh ủy Bùi Thị Quỳnh Vân nhấn mạnh vai trò quan trọng của Khởi nghĩa Ba Tơ trong lịch sử cách mạng Việt Nam. Chủ tịch Quốc hội Trần Thanh Mẫn ghi nhận sự phát triển mạnh mẽ của Quảng Ngãi trong 35 năm qua và đề xuất các nhiệm vụ để tỉnh tiếp tục phát triển bền vững.",
-    "link": "https://vnexpress.net/quang-ngai-ky-niem-80-nam-khoi-nghia-ba-to-4860602.html",
-    "cat": "thoi-su",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Lễ kỷ niệm Khởi nghĩa Ba Tơ diễn ra vào ngày nào?",
-    "answers": [
-      {
-        "text": "12/3",
-        "correct": true
-      },
-      {
-        "text": "13/3",
-        "correct": false
-      },
-      {
-        "text": "11/3",
-        "correct": false
-      },
-      {
-        "text": "14/3",
-        "correct": false
-      },
-      {
-        "text": "15/3",
         "correct": false
       }
     ]
