Update generated content

--- a/home.html
+++ b/home.html
@@ -148,6 +148,33 @@
     // Replace this with your actual news data.
     const newsData = [
   {
+    "title": "Đồng loạt cải tạo vỉa hè ở nội đô TP HCM",
+    "content": "TP Hồ Chí Minh đang tiến hành cải tạo đồng loạt vỉa hè tại nhiều tuyến đường, đặc biệt là ở quận 1 và quận 6, nhằm chỉnh trang đô thị và nâng cao sự thuận tiện cho người đi bộ. Các vỉa hè sẽ được lát đá granite mới, thay thế nắp hầm ga, và cải tạo bồn cây xanh. Tổng kinh phí cho dự án này lên đến hơn 355 tỷ đồng cho quận 1 và 55 tỷ đồng cho quận 6. Dự kiến, các công trình cải tạo sẽ hoàn thành trước lễ 30/4 năm nay.",
+    "link": "https://vnexpress.net/dong-loat-cai-tao-via-he-o-noi-do-tp-hcm-4861003.html",
+    "cat": "thoi-su",
+    "positivity": 8,
+    "importance": 7,
+    "question": "TP HCM đang thực hiện dự án cải tạo vỉa hè nào?",
+    "answers": [
+      {
+        "text": "Cải tạo vỉa hè ở nội đô TP HCM",
+        "correct": true
+      },
+      {
+        "text": "Xây dựng cầu mới",
+        "correct": false
+      },
+      {
+        "text": "Mở rộng đường cao tốc",
+        "correct": false
+      },
+      {
+        "text": "Xây dựng khu thương mại mới",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Man Utd đại thắng ở Europa League",
     "content": "Man Utd đã có một chiến thắng ấn tượng ở Europa League khi đánh bại Real Sociedad với tỷ số 4-1 trong trận lượt về, trong đó tiền vệ Bruno Fernandes ghi được hat-trick. Kết quả này giúp Man Utd giành chiến thắng chung cuộc 5-2 tại vòng 1/8. Đây là một bước tiến quan trọng của đội bóng trong giải đấu châu Âu.",
     "link": "https://vnexpress.net/man-utd-dai-thang-o-europa-league-4861095.html",
@@ -991,28 +1018,28 @@
     ]
   },
   {
-    "title": "4 dưỡng chất tăng miễn dịch trẻ nên ăn mỗi ngày",
-    "content": "Bài viết nêu bật bốn dưỡng chất quan trọng giúp tăng cường hệ miễn dịch cho trẻ, bao gồm kẽm, vitamin C, chất chống oxy hóa và axit béo omega-3. Những dưỡng chất này giúp trẻ phát triển tốt, giảm nguy cơ mắc bệnh, đặc biệt là khi thời tiết thay đổi. Cha mẹ được khuyến khích cho trẻ ăn đa dạng thực phẩm chứa các chất dinh dưỡng này để hỗ trợ sức khỏe và đề kháng của trẻ.",
-    "link": "https://vnexpress.net/4-duong-chat-tang-mien-dich-tre-nen-an-moi-ngay-4860801.html",
+    "title": "Mặt mưng mủ sau cấy mỡ tạo 'má baby'",
+    "content": "Một phụ nữ 35 tuổi đã gặp phải tình trạng nhiễm trùng và mủ sau khi cấy mỡ tự thân vào má tại một spa. Các bác sĩ tại Bệnh viện Bạch Mai đã chẩn đoán và điều trị bằng kháng sinh cùng với việc dẫn lưu dịch mủ. Cơ sở y tế khuyến cáo mọi người chỉ nên thực hiện các thủ thuật thẩm mỹ tại những nơi được cấp phép để tránh nguy cơ biến chứng nguy hiểm.",
+    "link": "https://vnexpress.net/mat-mung-mu-sau-cay-mo-tao-ma-baby-4860892.html",
     "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Những dưỡng chất nào giúp tăng miễn dịch cho trẻ nên ăn mỗi ngày?",
+    "positivity": 3,
+    "importance": 7,
+    "question": "Tại sao người phụ nữ 35 tuổi phải nhập viện sau khi cấy mỡ?",
     "answers": [
       {
-        "text": "Kẽm, vitamin C, chất chống oxy hóa, axit béo omega-3",
+        "text": "Vì bị nhiễm trùng và xuất hiện mủ dưới da.",
         "correct": true
       },
       {
-        "text": "Chất xơ, đường, muối, protein",
+        "text": "Vì gặp phải dị ứng với thuốc gây mê.",
         "correct": false
       },
       {
-        "text": "Vitamin D, canxi, sắt, đồng",
+        "text": "Vì không thích kết quả thẩm mỹ.",
         "correct": false
       },
       {
-        "text": "Chất béo bão hòa, cholesterol, đường tinh luyện",
+        "text": "Vì cần phải nghỉ ngơi sau khi làm đẹp.",
         "correct": false
       }
     ]
@@ -1045,28 +1072,28 @@
     ]
   },
   {
-    "title": "Mặt mưng mủ sau cấy mỡ tạo 'má baby'",
-    "content": "Một phụ nữ 35 tuổi đã gặp phải tình trạng nhiễm trùng và mủ sau khi cấy mỡ tự thân vào má tại một spa. Các bác sĩ tại Bệnh viện Bạch Mai đã chẩn đoán và điều trị bằng kháng sinh cùng với việc dẫn lưu dịch mủ. Cơ sở y tế khuyến cáo mọi người chỉ nên thực hiện các thủ thuật thẩm mỹ tại những nơi được cấp phép để tránh nguy cơ biến chứng nguy hiểm.",
-    "link": "https://vnexpress.net/mat-mung-mu-sau-cay-mo-tao-ma-baby-4860892.html",
+    "title": "4 dưỡng chất tăng miễn dịch trẻ nên ăn mỗi ngày",
+    "content": "Bài viết nêu bật bốn dưỡng chất quan trọng giúp tăng cường hệ miễn dịch cho trẻ, bao gồm kẽm, vitamin C, chất chống oxy hóa và axit béo omega-3. Những dưỡng chất này giúp trẻ phát triển tốt, giảm nguy cơ mắc bệnh, đặc biệt là khi thời tiết thay đổi. Cha mẹ được khuyến khích cho trẻ ăn đa dạng thực phẩm chứa các chất dinh dưỡng này để hỗ trợ sức khỏe và đề kháng của trẻ.",
+    "link": "https://vnexpress.net/4-duong-chat-tang-mien-dich-tre-nen-an-moi-ngay-4860801.html",
     "cat": "suc-khoe",
-    "positivity": 3,
-    "importance": 7,
-    "question": "Tại sao người phụ nữ 35 tuổi phải nhập viện sau khi cấy mỡ?",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Những dưỡng chất nào giúp tăng miễn dịch cho trẻ nên ăn mỗi ngày?",
     "answers": [
       {
-        "text": "Vì bị nhiễm trùng và xuất hiện mủ dưới da.",
+        "text": "Kẽm, vitamin C, chất chống oxy hóa, axit béo omega-3",
         "correct": true
       },
       {
-        "text": "Vì gặp phải dị ứng với thuốc gây mê.",
+        "text": "Chất xơ, đường, muối, protein",
         "correct": false
       },
       {
-        "text": "Vì không thích kết quả thẩm mỹ.",
+        "text": "Vitamin D, canxi, sắt, đồng",
         "correct": false
       },
       {
-        "text": "Vì cần phải nghỉ ngơi sau khi làm đẹp.",
+        "text": "Chất béo bão hòa, cholesterol, đường tinh luyện",
         "correct": false
       }
     ]
@@ -2138,6 +2165,33 @@
     ]
   },
   {
+    "title": "Điều gì xảy ra nếu ngưng thở khi ngủ kéo dài?",
+    "content": "Ngưng thở khi ngủ kéo dài có thể dẫn đến nhiều vấn đề sức khỏe nghiêm trọng. Người mắc chứng này thường cảm thấy mệt mỏi, buồn ngủ vào ban ngày và có nguy cơ cao mắc bệnh tim, huyết áp cao, hoặc đột quỵ. Tình trạng này có thể làm suy yếu hệ miễn dịch, tăng nguy cơ mắc hội chứng chuyển hóa và ảnh hưởng đến sức khỏe tâm thần. Nếu không được kiểm soát, ngưng thở khi ngủ có thể gây ra các biến chứng nghiêm trọng về sức khỏe.",
+    "link": "https://vnexpress.net/dieu-gi-xay-ra-neu-ngung-tho-khi-ngu-keo-dai-4860762.html",
+    "cat": "suc-khoe",
+    "positivity": 3,
+    "importance": 9,
+    "question": "Ngưng thở khi ngủ kéo dài có thể gây ra những vấn đề sức khỏe nào?",
+    "answers": [
+      {
+        "text": "Mệt mỏi, buồn ngủ ban ngày và tăng nguy cơ bệnh tim",
+        "correct": true
+      },
+      {
+        "text": "Chỉ gây ra triệu chứng nhẹ và không nghiêm trọng",
+        "correct": false
+      },
+      {
+        "text": "Không có tác động đến sức khỏe",
+        "correct": false
+      },
+      {
+        "text": "Chỉ ảnh hưởng đến giấc ngủ mà thôi",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "ENT Masterclass lần đầu đào tạo tai mũi họng và phẫu thuật cổ tại Việt Nam",
     "content": "Hội nghị ENT Masterclass lần đầu tiên được tổ chức tại Việt Nam sẽ diễn ra vào ngày 31/3 và 1/4 tại Bệnh viện Đa khoa Hồng Ngọc. Sự kiện này quy tụ 33 bài báo cáo chuyên sâu về tai mũi họng và phẫu thuật cổ, với sự tham gia của các chuyên gia hàng đầu quốc tế và trong nước. Mục tiêu của hội nghị là nâng cao trình độ chuyên môn cho các bác sĩ Việt Nam và kết nối cộng đồng y khoa toàn cầu.",
     "link": "https://vnexpress.net/ent-masterclass-lan-dau-dao-tao-tai-mui-hong-va-phau-thuat-co-tai-viet-nam-4860526.html",
@@ -2164,33 +2218,6 @@
       },
       {
         "text": "29/3 và 30/3",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Điều gì xảy ra nếu ngưng thở khi ngủ kéo dài?",
-    "content": "Ngưng thở khi ngủ kéo dài có thể dẫn đến nhiều vấn đề sức khỏe nghiêm trọng. Người mắc chứng này thường cảm thấy mệt mỏi, buồn ngủ vào ban ngày và có nguy cơ cao mắc bệnh tim, huyết áp cao, hoặc đột quỵ. Tình trạng này có thể làm suy yếu hệ miễn dịch, tăng nguy cơ mắc hội chứng chuyển hóa và ảnh hưởng đến sức khỏe tâm thần. Nếu không được kiểm soát, ngưng thở khi ngủ có thể gây ra các biến chứng nghiêm trọng về sức khỏe.",
-    "link": "https://vnexpress.net/dieu-gi-xay-ra-neu-ngung-tho-khi-ngu-keo-dai-4860762.html",
-    "cat": "suc-khoe",
-    "positivity": 3,
-    "importance": 9,
-    "question": "Ngưng thở khi ngủ kéo dài có thể gây ra những vấn đề sức khỏe nào?",
-    "answers": [
-      {
-        "text": "Mệt mỏi, buồn ngủ ban ngày và tăng nguy cơ bệnh tim",
-        "correct": true
-      },
-      {
-        "text": "Chỉ gây ra triệu chứng nhẹ và không nghiêm trọng",
-        "correct": false
-      },
-      {
-        "text": "Không có tác động đến sức khỏe",
-        "correct": false
-      },
-      {
-        "text": "Chỉ ảnh hưởng đến giấc ngủ mà thôi",
         "correct": false
       }
     ]
@@ -4351,60 +4378,6 @@
       },
       {
         "text": "Người yêu cũ",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "\"Nghị Quế\" Mai Châu: Mỹ nhân điện ảnh một thời, U100 bình yên bên con cháu",
-    "content": "NSƯT Mai Châu, một trong những mỹ nhân điện ảnh nổi tiếng của Việt Nam, hiện đã gần 100 tuổi và sống trong bình yên bên con cháu. Bà có một cuộc đời phong phú với nhiều kỷ niệm từ thời kỳ điện ảnh cách mạng, từng tham gia nhiều bộ phim nổi tiếng và để lại dấu ấn sâu sắc trong lòng khán giả. Dù sức khỏe yếu hơn, bà vẫn giữ được trí nhớ minh mẫn và sống lạc quan, yêu thương gia đình.",
-    "link": "https://dantri.com.vn/giai-tri/nghi-que-mai-chau-my-nhan-dien-anh-mot-thoi-u100-binh-yen-ben-con-chau-20250312093029122.htm",
-    "cat": "giai-tri",
-    "positivity": 10,
-    "importance": 8,
-    "question": "NSƯT Mai Châu hiện tại đang sống ở đâu và với ai?",
-    "answers": [
-      {
-        "text": "Bà sống cùng các con và cháu",
-        "correct": true
-      },
-      {
-        "text": "Bà sống một mình",
-        "correct": false
-      },
-      {
-        "text": "Bà sống tại viện dưỡng lão",
-        "correct": false
-      },
-      {
-        "text": "Bà sống với một người bạn",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Giải mã săn vé xem xiếc khó như concert, nghệ sĩ xiếc không khổ như lời đồn",
-    "content": "Bài viết khám phá sự gia tăng độ phổ biến của vở xiếc \"Vùng đất kỳ bí\" tại TPHCM, cho thấy khán giả hiện nay phải đặt vé trước nhiều tuần để có chỗ ngồi. Nhiều người so sánh việc săn vé xem xiếc với việc săn vé concert ca nhạc, điều này thể hiện sự thay đổi trong cách nhìn nhận về nghệ thuật xiếc. Các nghệ sĩ xiếc cũng khẳng định rằng cuộc sống của họ không khổ sở như trước kia, nhờ vào sự phát triển của ngành nghệ thuật biểu diễn và sự quan tâm từ khán giả trẻ.",
-    "link": "https://dantri.com.vn/giai-tri/giai-ma-san-ve-xem-xiec-kho-nhu-concert-nghe-si-xiec-khong-kho-nhu-loi-don-20250312171333837.htm",
-    "cat": "giai-tri",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Vì sao khán giả phải đặt vé trước 2 tuần để xem xiếc?",
-    "answers": [
-      {
-        "text": "Vì vở xiếc \"Vùng đất kỳ bí\" rất phổ biến",
-        "correct": true
-      },
-      {
-        "text": "Vì xiếc không còn thu hút khán giả",
-        "correct": false
-      },
-      {
-        "text": "Vì giá vé quá cao",
-        "correct": false
-      },
-      {
-        "text": "Vì thời gian diễn không cố định",
         "correct": false
       }
     ]
