--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -81,6 +81,33 @@
     // Example JSON array with news objects
     const newsData = [
   {
+    "title": "Ngành thuế khóc ròng vì những khoản nợ thuế vài ngàn đồng",
+    "content": "Ngành thuế Việt Nam đang gặp khó khăn với hơn 1,4 tỷ khoản nợ thuế có giá trị từ 2.000 đến 10.000 đồng, chủ yếu là tiền phạt chậm nộp. Việc thu những khoản nợ nhỏ này tốn kém chi phí quản lý hơn cả số thuế thu được, khiến ngành thuế đề xuất xóa bỏ các khoản nợ nhỏ để giảm áp lực. Các chuyên gia cũng đề xuất nâng ngưỡng miễn thuế cho cá nhân lên 100.000 đồng để tối ưu hóa nguồn lực và giảm lãng phí thời gian, nhân lực cho việc xử lý các khoản nợ không đáng kể này.",
+    "link": "https://tuoitre.vn/nganh-thue-khoc-rong-vi-nhung-khoan-no-thue-vai-ngan-dong-20250313222531182.htm",
+    "cat": "kinh-doanh",
+    "positivity": 4,
+    "importance": 7,
+    "question": "Tại sao ngành thuế Việt Nam có nhiều khoản nợ thuế nhỏ?",
+    "answers": [
+      {
+        "text": "Vì chi phí thu thuế cao hơn số tiền thu được.",
+        "correct": true
+      },
+      {
+        "text": "Do người nộp thuế không quan tâm đến khoản nợ nhỏ.",
+        "correct": false
+      },
+      {
+        "text": "Vì ngành thuế không đủ nhân lực để thu nợ.",
+        "correct": false
+      },
+      {
+        "text": "Do các doanh nghiệp thường nộp thừa tiền thuế.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Đồng loạt cải tạo vỉa hè ở nội đô TP HCM",
     "content": "TP Hồ Chí Minh đang tiến hành cải tạo đồng loạt vỉa hè tại nhiều tuyến đường, đặc biệt là ở quận 1 và quận 6, nhằm chỉnh trang đô thị và nâng cao sự thuận tiện cho người đi bộ. Các vỉa hè sẽ được lát đá granite mới, thay thế nắp hầm ga, và cải tạo bồn cây xanh. Tổng kinh phí cho dự án này lên đến hơn 355 tỷ đồng cho quận 1 và 55 tỷ đồng cho quận 6. Dự kiến, các công trình cải tạo sẽ hoàn thành trước lễ 30/4 năm nay.",
     "link": "https://vnexpress.net/dong-loat-cai-tao-via-he-o-noi-do-tp-hcm-4861003.html",
@@ -224,33 +251,6 @@
     ]
   },
   {
-    "title": "Đầu tư gần 7.000 tỷ đồng làm đường nối cao tốc với Phan Thiết",
-    "content": "Dự án đường kết nối cao tốc Bắc Nam đến trung tâm Phan Thiết dài 11,4 km với tổng vốn gần 7.000 tỷ đồng đã được phê duyệt. Tuyến đường này sẽ giúp mở rộng không gian phát triển cho đô thị biển Phan Thiết, tạo thuận lợi cho giao thông và kết nối với các khu vực lân cận. Dự kiến, dự án sẽ khởi công vào giữa năm 2027 và hoàn thành vào quý 4/2028, góp phần quan trọng trong việc phát triển hạ tầng giao thông tại Bình Thuận.",
-    "link": "https://vnexpress.net/dau-tu-gan-7-000-ty-dong-lam-duong-noi-cao-toc-voi-phan-thiet-4861016.html",
-    "cat": "thoi-su",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Dự án đường nối cao tốc với Phan Thiết có tổng vốn đầu tư bao nhiêu?",
-    "answers": [
-      {
-        "text": "Gần 7.000 tỷ đồng",
-        "correct": true
-      },
-      {
-        "text": "Trên 5.000 tỷ đồng",
-        "correct": false
-      },
-      {
-        "text": "Dưới 6.000 tỷ đồng",
-        "correct": false
-      },
-      {
-        "text": "Khoảng 10.000 tỷ đồng",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Làng du lịch sinh thái Pơ mu xuống cấp",
     "content": "Làng du lịch sinh thái Pơ Mu, nằm ở huyện Tây Giang, Quảng Nam, hiện đang trong tình trạng xuống cấp nghiêm trọng. Mặc dù được xây dựng từ năm 2016 với 10 ngôi nhà sàn truyền thống nhằm phát triển du lịch cộng đồng, nhưng sau gần 10 năm, các ngôi nhà đã hư hỏng, không có người trông coi và không còn hoạt động. Dự án nâng cấp và cải tạo làng du lịch này đã được phê duyệt với kinh phí hơn 6 tỷ đồng, dự kiến hoàn thành vào năm 2026.",
     "link": "https://vnexpress.net/lang-du-lich-sinh-thai-po-mu-xuong-cap-4860923.html",
@@ -273,6 +273,33 @@
       },
       {
         "text": "Do không có khách du lịch đến thăm.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Đầu tư gần 7.000 tỷ đồng làm đường nối cao tốc với Phan Thiết",
+    "content": "Dự án đường kết nối cao tốc Bắc Nam đến trung tâm Phan Thiết dài 11,4 km với tổng vốn gần 7.000 tỷ đồng đã được phê duyệt. Tuyến đường này sẽ giúp mở rộng không gian phát triển cho đô thị biển Phan Thiết, tạo thuận lợi cho giao thông và kết nối với các khu vực lân cận. Dự kiến, dự án sẽ khởi công vào giữa năm 2027 và hoàn thành vào quý 4/2028, góp phần quan trọng trong việc phát triển hạ tầng giao thông tại Bình Thuận.",
+    "link": "https://vnexpress.net/dau-tu-gan-7-000-ty-dong-lam-duong-noi-cao-toc-voi-phan-thiet-4861016.html",
+    "cat": "thoi-su",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Dự án đường nối cao tốc với Phan Thiết có tổng vốn đầu tư bao nhiêu?",
+    "answers": [
+      {
+        "text": "Gần 7.000 tỷ đồng",
+        "correct": true
+      },
+      {
+        "text": "Trên 5.000 tỷ đồng",
+        "correct": false
+      },
+      {
+        "text": "Dưới 6.000 tỷ đồng",
+        "correct": false
+      },
+      {
+        "text": "Khoảng 10.000 tỷ đồng",
         "correct": false
       }
     ]
@@ -951,33 +978,6 @@
     ]
   },
   {
-    "title": "Mặt mưng mủ sau cấy mỡ tạo 'má baby'",
-    "content": "Một phụ nữ 35 tuổi đã gặp phải tình trạng nhiễm trùng và mủ sau khi cấy mỡ tự thân vào má tại một spa. Các bác sĩ tại Bệnh viện Bạch Mai đã chẩn đoán và điều trị bằng kháng sinh cùng với việc dẫn lưu dịch mủ. Cơ sở y tế khuyến cáo mọi người chỉ nên thực hiện các thủ thuật thẩm mỹ tại những nơi được cấp phép để tránh nguy cơ biến chứng nguy hiểm.",
-    "link": "https://vnexpress.net/mat-mung-mu-sau-cay-mo-tao-ma-baby-4860892.html",
-    "cat": "suc-khoe",
-    "positivity": 3,
-    "importance": 7,
-    "question": "Tại sao người phụ nữ 35 tuổi phải nhập viện sau khi cấy mỡ?",
-    "answers": [
-      {
-        "text": "Vì bị nhiễm trùng và xuất hiện mủ dưới da.",
-        "correct": true
-      },
-      {
-        "text": "Vì gặp phải dị ứng với thuốc gây mê.",
-        "correct": false
-      },
-      {
-        "text": "Vì không thích kết quả thẩm mỹ.",
-        "correct": false
-      },
-      {
-        "text": "Vì cần phải nghỉ ngơi sau khi làm đẹp.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Hiểu nhầm về tiêm vaccine HPV cho nữ giới",
     "content": "Bài viết làm rõ những hiểu nhầm phổ biến về tiêm vaccine HPV cho nữ giới. Nhiều người cho rằng chỉ cần quan hệ chung thủy hoặc đã nhiễm HPV thì không cần tiêm phòng, nhưng thực tế virus HPV có thể lây qua nhiều cách và có nhiều chủng khác nhau. Bác sĩ khuyến cáo rằng việc tiêm vaccine HPV là rất quan trọng để phòng ngừa các bệnh liên quan và nên được thực hiện càng sớm càng tốt, đặc biệt cho nữ giới từ 27 tuổi trở lên.",
     "link": "https://vnexpress.net/hieu-nham-ve-tiem-vaccine-hpv-cho-nu-gioi-4860700.html",
@@ -1005,28 +1005,28 @@
     ]
   },
   {
-    "title": "4 dưỡng chất tăng miễn dịch trẻ nên ăn mỗi ngày",
-    "content": "Bài viết nêu bật bốn dưỡng chất quan trọng giúp tăng cường hệ miễn dịch cho trẻ, bao gồm kẽm, vitamin C, chất chống oxy hóa và axit béo omega-3. Những dưỡng chất này giúp trẻ phát triển tốt, giảm nguy cơ mắc bệnh, đặc biệt là khi thời tiết thay đổi. Cha mẹ được khuyến khích cho trẻ ăn đa dạng thực phẩm chứa các chất dinh dưỡng này để hỗ trợ sức khỏe và đề kháng của trẻ.",
-    "link": "https://vnexpress.net/4-duong-chat-tang-mien-dich-tre-nen-an-moi-ngay-4860801.html",
+    "title": "Mặt mưng mủ sau cấy mỡ tạo 'má baby'",
+    "content": "Một phụ nữ 35 tuổi đã gặp phải tình trạng nhiễm trùng và mủ sau khi cấy mỡ tự thân vào má tại một spa. Các bác sĩ tại Bệnh viện Bạch Mai đã chẩn đoán và điều trị bằng kháng sinh cùng với việc dẫn lưu dịch mủ. Cơ sở y tế khuyến cáo mọi người chỉ nên thực hiện các thủ thuật thẩm mỹ tại những nơi được cấp phép để tránh nguy cơ biến chứng nguy hiểm.",
+    "link": "https://vnexpress.net/mat-mung-mu-sau-cay-mo-tao-ma-baby-4860892.html",
     "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Những dưỡng chất nào giúp tăng miễn dịch cho trẻ nên ăn mỗi ngày?",
+    "positivity": 3,
+    "importance": 7,
+    "question": "Tại sao người phụ nữ 35 tuổi phải nhập viện sau khi cấy mỡ?",
     "answers": [
       {
-        "text": "Kẽm, vitamin C, chất chống oxy hóa, axit béo omega-3",
+        "text": "Vì bị nhiễm trùng và xuất hiện mủ dưới da.",
         "correct": true
       },
       {
-        "text": "Chất xơ, đường, muối, protein",
+        "text": "Vì gặp phải dị ứng với thuốc gây mê.",
         "correct": false
       },
       {
-        "text": "Vitamin D, canxi, sắt, đồng",
+        "text": "Vì không thích kết quả thẩm mỹ.",
         "correct": false
       },
       {
-        "text": "Chất béo bão hòa, cholesterol, đường tinh luyện",
+        "text": "Vì cần phải nghỉ ngơi sau khi làm đẹp.",
         "correct": false
       }
     ]
@@ -1054,6 +1054,33 @@
       },
       {
         "text": "Người suy thận độ 4 nên ăn nhiều trái cây và rau quả.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "4 dưỡng chất tăng miễn dịch trẻ nên ăn mỗi ngày",
+    "content": "Bài viết nêu bật bốn dưỡng chất quan trọng giúp tăng cường hệ miễn dịch cho trẻ, bao gồm kẽm, vitamin C, chất chống oxy hóa và axit béo omega-3. Những dưỡng chất này giúp trẻ phát triển tốt, giảm nguy cơ mắc bệnh, đặc biệt là khi thời tiết thay đổi. Cha mẹ được khuyến khích cho trẻ ăn đa dạng thực phẩm chứa các chất dinh dưỡng này để hỗ trợ sức khỏe và đề kháng của trẻ.",
+    "link": "https://vnexpress.net/4-duong-chat-tang-mien-dich-tre-nen-an-moi-ngay-4860801.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Những dưỡng chất nào giúp tăng miễn dịch cho trẻ nên ăn mỗi ngày?",
+    "answers": [
+      {
+        "text": "Kẽm, vitamin C, chất chống oxy hóa, axit béo omega-3",
+        "correct": true
+      },
+      {
+        "text": "Chất xơ, đường, muối, protein",
+        "correct": false
+      },
+      {
+        "text": "Vitamin D, canxi, sắt, đồng",
+        "correct": false
+      },
+      {
+        "text": "Chất béo bão hòa, cholesterol, đường tinh luyện",
         "correct": false
       }
     ]
@@ -1171,33 +1198,6 @@
     ]
   },
   {
-    "title": "Amorim: 'Man Utd bị Ratcliffe chê là đúng'",
-    "content": "HLV Ruben Amorim của Man Utd đã thừa nhận rằng ông và đội bóng không đạt phong độ tốt trong mùa giải này, sau khi bị đồng sở hữu Jim Ratcliffe chỉ trích. Ratcliffe cho rằng nhiều cầu thủ của Man Utd nhận lương cao nhưng không đủ chất lượng để thi đấu hiệu quả. Amorim cũng cho biết ông không phàn nàn về những bình luận của Ratcliffe và cam kết sẽ cải thiện kết quả của đội bóng.",
-    "link": "https://vnexpress.net/amorim-man-utd-bi-ratcliffe-che-la-dung-4860857.html",
-    "cat": "the-thao",
-    "positivity": 4,
-    "importance": 7,
-    "question": "Amorim đã nói gì về sự chỉ trích của Ratcliffe đối với Man Utd?",
-    "answers": [
-      {
-        "text": "Ông thừa nhận đội bóng không thi đấu tốt và cần cải thiện.",
-        "correct": true
-      },
-      {
-        "text": "Ông cho rằng Ratcliffe đã sai khi chỉ trích cầu thủ.",
-        "correct": false
-      },
-      {
-        "text": "Ông không quan tâm đến lời chỉ trích của Ratcliffe.",
-        "correct": false
-      },
-      {
-        "text": "Ông khẳng định rằng Man Utd đang có phong độ tốt.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "VinFast và ngân hàng Indonesia thúc đẩy giao thông điện hóa",
     "content": "VinFast, hãng xe điện Việt Nam, đã ký kết hợp tác với ngân hàng Bank Negara Indonesia (BNI) để phát triển hệ sinh thái xe điện tại Indonesia. Lễ ký kết diễn ra trong khuôn khổ buổi đối thoại kinh doanh Việt Nam – Indonesia, với mục tiêu thúc đẩy chuyển đổi sang xe xanh và phát triển bền vững. BNI sẽ hỗ trợ VinFast trong việc cung cấp các giải pháp tài chính và tư vấn nhằm khuyến khích người dân Indonesia sử dụng xe điện. Cả hai bên đều cam kết triển khai các chiến dịch nâng cao nhận thức về giao thông xanh và phát triển các sản phẩm xe điện tại thị trường này.",
     "link": "https://vnexpress.net/vinfast-va-ngan-hang-indonesia-thuc-day-giao-thong-dien-hoa-4861020.html",
@@ -1220,6 +1220,33 @@
       },
       {
         "text": "Ngân hàng Phát triển Châu Á",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Amorim: 'Man Utd bị Ratcliffe chê là đúng'",
+    "content": "HLV Ruben Amorim của Man Utd đã thừa nhận rằng ông và đội bóng không đạt phong độ tốt trong mùa giải này, sau khi bị đồng sở hữu Jim Ratcliffe chỉ trích. Ratcliffe cho rằng nhiều cầu thủ của Man Utd nhận lương cao nhưng không đủ chất lượng để thi đấu hiệu quả. Amorim cũng cho biết ông không phàn nàn về những bình luận của Ratcliffe và cam kết sẽ cải thiện kết quả của đội bóng.",
+    "link": "https://vnexpress.net/amorim-man-utd-bi-ratcliffe-che-la-dung-4860857.html",
+    "cat": "the-thao",
+    "positivity": 4,
+    "importance": 7,
+    "question": "Amorim đã nói gì về sự chỉ trích của Ratcliffe đối với Man Utd?",
+    "answers": [
+      {
+        "text": "Ông thừa nhận đội bóng không thi đấu tốt và cần cải thiện.",
+        "correct": true
+      },
+      {
+        "text": "Ông cho rằng Ratcliffe đã sai khi chỉ trích cầu thủ.",
+        "correct": false
+      },
+      {
+        "text": "Ông không quan tâm đến lời chỉ trích của Ratcliffe.",
+        "correct": false
+      },
+      {
+        "text": "Ông khẳng định rằng Man Utd đang có phong độ tốt.",
         "correct": false
       }
     ]
@@ -2500,6 +2527,33 @@
     ]
   },
   {
+    "title": "Đau khớp háng có nên đi bộ?",
+    "content": "Đau khớp háng là vấn đề phổ biến ở người lớn tuổi, đặc biệt là những người bị thoái hóa khớp hoặc viêm khớp. Mặc dù nhiều người lo lắng rằng đi bộ có thể làm tăng cơn đau, nhưng nếu thực hiện đúng cách, đi bộ có thể mang lại nhiều lợi ích cho khớp háng và sức khỏe tổng thể. Đi bộ kích thích sản xuất dịch khớp, giúp khớp hoạt động linh hoạt hơn và hạn chế tình trạng cứng khớp. Tuy nhiên, nếu có các triệu chứng như đau dữ dội hoặc sưng, người bệnh nên ngừng đi bộ và tham khảo ý kiến bác sĩ.",
+    "link": "https://vnexpress.net/dau-khop-hang-co-nen-di-bo-4860837.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Đau khớp háng có nên đi bộ không?",
+    "answers": [
+      {
+        "text": "Có, đi bộ đúng cách có thể cải thiện triệu chứng.",
+        "correct": true
+      },
+      {
+        "text": "Không, đi bộ làm tình trạng bệnh nặng hơn.",
+        "correct": false
+      },
+      {
+        "text": "Có, nhưng chỉ nên đi bộ trên địa hình bằng phẳng.",
+        "correct": false
+      },
+      {
+        "text": "Không, đi bộ không có tác dụng gì đối với khớp háng.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Làm thế nào nhận biết rối loạn tiền đình?",
     "content": "Rối loạn tiền đình là tình trạng liên quan đến thăng bằng, gây ra triệu chứng như choáng váng, hoa mắt. Các triệu chứng này có thể là dấu hiệu của nhiều bệnh khác nhau, bao gồm tim mạch và stress. Để chẩn đoán chính xác, người bệnh nên thăm khám tại bệnh viện chuyên khoa, nơi bác sĩ sẽ sử dụng công nghệ hiện đại như hệ thống Interacoustics để kiểm tra và xác định nguyên nhân gây ra tình trạng này.",
     "link": "https://vnexpress.net/lam-the-nao-nhan-biet-roi-loan-tien-dinh-4860719.html",
@@ -2553,33 +2607,6 @@
       },
       {
         "text": "Vì thích chơi game hơn học",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Đau khớp háng có nên đi bộ?",
-    "content": "Đau khớp háng là vấn đề phổ biến ở người lớn tuổi, đặc biệt là những người bị thoái hóa khớp hoặc viêm khớp. Mặc dù nhiều người lo lắng rằng đi bộ có thể làm tăng cơn đau, nhưng nếu thực hiện đúng cách, đi bộ có thể mang lại nhiều lợi ích cho khớp háng và sức khỏe tổng thể. Đi bộ kích thích sản xuất dịch khớp, giúp khớp hoạt động linh hoạt hơn và hạn chế tình trạng cứng khớp. Tuy nhiên, nếu có các triệu chứng như đau dữ dội hoặc sưng, người bệnh nên ngừng đi bộ và tham khảo ý kiến bác sĩ.",
-    "link": "https://vnexpress.net/dau-khop-hang-co-nen-di-bo-4860837.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Đau khớp háng có nên đi bộ không?",
-    "answers": [
-      {
-        "text": "Có, đi bộ đúng cách có thể cải thiện triệu chứng.",
-        "correct": true
-      },
-      {
-        "text": "Không, đi bộ làm tình trạng bệnh nặng hơn.",
-        "correct": false
-      },
-      {
-        "text": "Có, nhưng chỉ nên đi bộ trên địa hình bằng phẳng.",
-        "correct": false
-      },
-      {
-        "text": "Không, đi bộ không có tác dụng gì đối với khớp háng.",
         "correct": false
       }
     ]
@@ -4226,64 +4253,6 @@
       },
       {
         "text": "10 kg",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Real loại Atletico bằng loạt luân lưu Champions League",
-    "content": "Real Madrid đã xuất sắc loại Atletico Madrid khỏi Champions League sau loạt sút luân lưu với tỷ số 4-2. Trung vệ Antonio Rudiger đã thực hiện cú sút quyết định, mặc dù thủ môn Jan Oblak đã đoán đúng hướng nhưng không thể cứu thua. Atletico đã có cơ hội nhưng không thể tận dụng, trong khi Real Madrid đã có lần thứ tư giành chiến thắng trong loạt đá luân lưu tại Champions League.",
-    "link": "https://vnexpress.net/real-loai-atletico-bang-loat-luan-luu-champions-league-4860608.html",
-    "cat": "the-thao",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Real Madrid đã loại Atletico Madrid bằng cách nào ở Champions League?",
-    "answers": [
-      {
-        "text": "Loạt sút luân lưu",
-        "correct": true
-      },
-      {
-        "text": "Bàn thắng trong trận đấu",
-        "correct": false
-      },
-      {
-        "text": "Phạt đền",
-        "correct": false
-      },
-      {
-        "text": "Thắng cách biệt 2 bàn",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "9 câu hỏi về dự án xây sân nhà mới của Man Utd",
-    "content": "Dự án xây dựng sân nhà mới của Manchester United có sức chứa 100.000 chỗ ngồi, dự kiến hoàn thành trong 5 năm, với chi phí khoảng 2 tỷ bảng. Sân mới sẽ được xây dựng chủ yếu tại một địa điểm khác trước khi lắp ghép tại khu vực Old Trafford hiện tại. Old Trafford có thể sẽ bị phá bỏ, và đội nữ của Man Utd có thể thi đấu tại sân mới. Dự án hứa hẹn tạo ra 92.000 việc làm mới và đóng góp lớn cho nền kinh tế Vương quốc Anh.",
-    "link": "https://vnexpress.net/9-cau-hoi-ve-du-an-xay-san-nha-moi-cua-man-utd-4860575.html",
-    "cat": "the-thao",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Dự án sân nhà mới của Man Utd sẽ được hoàn thành trong bao lâu?",
-    "answers": [
-      {
-        "text": "5 năm",
-        "correct": true
-      },
-      {
-        "text": "10 năm",
-        "correct": false
-      },
-      {
-        "text": "3 năm",
-        "correct": false
-      },
-      {
-        "text": "8 năm",
-        "correct": false
-      },
-      {
-        "text": "12 năm",
         "correct": false
       }
     ]
