Update generated content

--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -471,6 +471,37 @@
     */
     const newsData = [
   {
+    "title": "'Quả bom' dân số già của Malaysia",
+    "content": "Malaysia đang đối mặt với vấn đề dân số già hóa khi tỷ lệ người từ 65 tuổi trở lên đã đạt 8,1% vào năm ngoái và có thể lên tới 14,5% vào năm 2040, sớm hơn dự báo. Điều này đặt ra thách thức lớn về nhu cầu chăm sóc người cao tuổi, khi mà số lượng người đang chăm sóc họ ngày càng giảm, trong khi cơ sở hạ tầng y tế và hỗ trợ xã hội lại không đủ đáp ứng. Các chuyên gia cảnh báo rằng nếu không có sự chuẩn bị và thay đổi chính sách kịp thời, tình trạng này sẽ trở nên nghiêm trọng hơn trong tương lai.",
+    "link": "https://vnexpress.net/qua-bom-dan-so-gia-cua-malaysia-4860748.html",
+    "cat": "suc-khoe",
+    "positivity": 4,
+    "importance": 9,
+    "question": "Malaysia đang phải đối mặt với vấn đề gì liên quan đến dân số?",
+    "answers": [
+      {
+        "text": "Già hóa dân số",
+        "correct": true
+      },
+      {
+        "text": "Tỷ lệ sinh tăng",
+        "correct": false
+      },
+      {
+        "text": "Thiếu lao động trẻ",
+        "correct": false
+      },
+      {
+        "text": "Gia tăng tỷ lệ thất nghiệp",
+        "correct": false
+      },
+      {
+        "text": "Chăm sóc trẻ em",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Ngành thuế khóc ròng vì những khoản nợ thuế vài ngàn đồng",
     "content": "Ngành thuế Việt Nam đang gặp khó khăn với hơn 1,4 tỷ khoản nợ thuế có giá trị từ 2.000 đến 10.000 đồng, chủ yếu là tiền phạt chậm nộp. Việc thu những khoản nợ nhỏ này tốn kém chi phí quản lý hơn cả số thuế thu được, khiến ngành thuế đề xuất xóa bỏ các khoản nợ nhỏ để giảm áp lực. Các chuyên gia cũng đề xuất nâng ngưỡng miễn thuế cho cá nhân lên 100.000 đồng để tối ưu hóa nguồn lực và giảm lãng phí thời gian, nhân lực cho việc xử lý các khoản nợ không đáng kể này.",
     "link": "https://tuoitre.vn/nganh-thue-khoc-rong-vi-nhung-khoan-no-thue-vai-ngan-dong-20250313222531182.htm",
@@ -1615,33 +1646,6 @@
     ]
   },
   {
-    "title": "VinFast và ngân hàng Indonesia thúc đẩy giao thông điện hóa",
-    "content": "VinFast, hãng xe điện Việt Nam, đã ký kết hợp tác với ngân hàng Bank Negara Indonesia (BNI) để phát triển hệ sinh thái xe điện tại Indonesia. Lễ ký kết diễn ra trong khuôn khổ buổi đối thoại kinh doanh Việt Nam – Indonesia, với mục tiêu thúc đẩy chuyển đổi sang xe xanh và phát triển bền vững. BNI sẽ hỗ trợ VinFast trong việc cung cấp các giải pháp tài chính và tư vấn nhằm khuyến khích người dân Indonesia sử dụng xe điện. Cả hai bên đều cam kết triển khai các chiến dịch nâng cao nhận thức về giao thông xanh và phát triển các sản phẩm xe điện tại thị trường này.",
-    "link": "https://vnexpress.net/vinfast-va-ngan-hang-indonesia-thuc-day-giao-thong-dien-hoa-4861020.html",
-    "cat": "kinh-doanh",
-    "positivity": 8,
-    "importance": 9,
-    "question": "VinFast và ngân hàng nào đã ký hợp tác để phát triển giao thông điện hóa tại Indonesia?",
-    "answers": [
-      {
-        "text": "Bank Negara Indonesia (BNI)",
-        "correct": true
-      },
-      {
-        "text": "Ngân hàng Trung ương Indonesia",
-        "correct": false
-      },
-      {
-        "text": "Ngân hàng Thế giới",
-        "correct": false
-      },
-      {
-        "text": "Ngân hàng Phát triển Châu Á",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Amorim: 'Man Utd bị Ratcliffe chê là đúng'",
     "content": "HLV Ruben Amorim của Man Utd đã thừa nhận rằng ông và đội bóng không đạt phong độ tốt trong mùa giải này, sau khi bị đồng sở hữu Jim Ratcliffe chỉ trích. Ratcliffe cho rằng nhiều cầu thủ của Man Utd nhận lương cao nhưng không đủ chất lượng để thi đấu hiệu quả. Amorim cũng cho biết ông không phàn nàn về những bình luận của Ratcliffe và cam kết sẽ cải thiện kết quả của đội bóng.",
     "link": "https://vnexpress.net/amorim-man-utd-bi-ratcliffe-che-la-dung-4860857.html",
@@ -1664,6 +1668,33 @@
       },
       {
         "text": "Ông khẳng định rằng Man Utd đang có phong độ tốt.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "VinFast và ngân hàng Indonesia thúc đẩy giao thông điện hóa",
+    "content": "VinFast, hãng xe điện Việt Nam, đã ký kết hợp tác với ngân hàng Bank Negara Indonesia (BNI) để phát triển hệ sinh thái xe điện tại Indonesia. Lễ ký kết diễn ra trong khuôn khổ buổi đối thoại kinh doanh Việt Nam – Indonesia, với mục tiêu thúc đẩy chuyển đổi sang xe xanh và phát triển bền vững. BNI sẽ hỗ trợ VinFast trong việc cung cấp các giải pháp tài chính và tư vấn nhằm khuyến khích người dân Indonesia sử dụng xe điện. Cả hai bên đều cam kết triển khai các chiến dịch nâng cao nhận thức về giao thông xanh và phát triển các sản phẩm xe điện tại thị trường này.",
+    "link": "https://vnexpress.net/vinfast-va-ngan-hang-indonesia-thuc-day-giao-thong-dien-hoa-4861020.html",
+    "cat": "kinh-doanh",
+    "positivity": 8,
+    "importance": 9,
+    "question": "VinFast và ngân hàng nào đã ký hợp tác để phát triển giao thông điện hóa tại Indonesia?",
+    "answers": [
+      {
+        "text": "Bank Negara Indonesia (BNI)",
+        "correct": true
+      },
+      {
+        "text": "Ngân hàng Trung ương Indonesia",
+        "correct": false
+      },
+      {
+        "text": "Ngân hàng Thế giới",
+        "correct": false
+      },
+      {
+        "text": "Ngân hàng Phát triển Châu Á",
         "correct": false
       }
     ]
@@ -2515,33 +2546,6 @@
     ]
   },
   {
-    "title": "Điều gì xảy ra nếu ngưng thở khi ngủ kéo dài?",
-    "content": "Ngưng thở khi ngủ kéo dài có thể dẫn đến nhiều vấn đề sức khỏe nghiêm trọng. Người mắc chứng này thường cảm thấy mệt mỏi, buồn ngủ vào ban ngày và có nguy cơ cao mắc bệnh tim, huyết áp cao, hoặc đột quỵ. Tình trạng này có thể làm suy yếu hệ miễn dịch, tăng nguy cơ mắc hội chứng chuyển hóa và ảnh hưởng đến sức khỏe tâm thần. Nếu không được kiểm soát, ngưng thở khi ngủ có thể gây ra các biến chứng nghiêm trọng về sức khỏe.",
-    "link": "https://vnexpress.net/dieu-gi-xay-ra-neu-ngung-tho-khi-ngu-keo-dai-4860762.html",
-    "cat": "suc-khoe",
-    "positivity": 3,
-    "importance": 9,
-    "question": "Ngưng thở khi ngủ kéo dài có thể gây ra những vấn đề sức khỏe nào?",
-    "answers": [
-      {
-        "text": "Mệt mỏi, buồn ngủ ban ngày và tăng nguy cơ bệnh tim",
-        "correct": true
-      },
-      {
-        "text": "Chỉ gây ra triệu chứng nhẹ và không nghiêm trọng",
-        "correct": false
-      },
-      {
-        "text": "Không có tác động đến sức khỏe",
-        "correct": false
-      },
-      {
-        "text": "Chỉ ảnh hưởng đến giấc ngủ mà thôi",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "ENT Masterclass lần đầu đào tạo tai mũi họng và phẫu thuật cổ tại Việt Nam",
     "content": "Hội nghị ENT Masterclass lần đầu tiên được tổ chức tại Việt Nam sẽ diễn ra vào ngày 31/3 và 1/4 tại Bệnh viện Đa khoa Hồng Ngọc. Sự kiện này quy tụ 33 bài báo cáo chuyên sâu về tai mũi họng và phẫu thuật cổ, với sự tham gia của các chuyên gia hàng đầu quốc tế và trong nước. Mục tiêu của hội nghị là nâng cao trình độ chuyên môn cho các bác sĩ Việt Nam và kết nối cộng đồng y khoa toàn cầu.",
     "link": "https://vnexpress.net/ent-masterclass-lan-dau-dao-tao-tai-mui-hong-va-phau-thuat-co-tai-viet-nam-4860526.html",
@@ -2568,6 +2572,33 @@
       },
       {
         "text": "29/3 và 30/3",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Điều gì xảy ra nếu ngưng thở khi ngủ kéo dài?",
+    "content": "Ngưng thở khi ngủ kéo dài có thể dẫn đến nhiều vấn đề sức khỏe nghiêm trọng. Người mắc chứng này thường cảm thấy mệt mỏi, buồn ngủ vào ban ngày và có nguy cơ cao mắc bệnh tim, huyết áp cao, hoặc đột quỵ. Tình trạng này có thể làm suy yếu hệ miễn dịch, tăng nguy cơ mắc hội chứng chuyển hóa và ảnh hưởng đến sức khỏe tâm thần. Nếu không được kiểm soát, ngưng thở khi ngủ có thể gây ra các biến chứng nghiêm trọng về sức khỏe.",
+    "link": "https://vnexpress.net/dieu-gi-xay-ra-neu-ngung-tho-khi-ngu-keo-dai-4860762.html",
+    "cat": "suc-khoe",
+    "positivity": 3,
+    "importance": 9,
+    "question": "Ngưng thở khi ngủ kéo dài có thể gây ra những vấn đề sức khỏe nào?",
+    "answers": [
+      {
+        "text": "Mệt mỏi, buồn ngủ ban ngày và tăng nguy cơ bệnh tim",
+        "correct": true
+      },
+      {
+        "text": "Chỉ gây ra triệu chứng nhẹ và không nghiêm trọng",
+        "correct": false
+      },
+      {
+        "text": "Không có tác động đến sức khỏe",
+        "correct": false
+      },
+      {
+        "text": "Chỉ ảnh hưởng đến giấc ngủ mà thôi",
         "correct": false
       }
     ]
@@ -2917,6 +2948,33 @@
     ]
   },
   {
+    "title": "Làm thế nào nhận biết rối loạn tiền đình?",
+    "content": "Rối loạn tiền đình là tình trạng liên quan đến thăng bằng, gây ra triệu chứng như choáng váng, hoa mắt. Các triệu chứng này có thể là dấu hiệu của nhiều bệnh khác nhau, bao gồm tim mạch và stress. Để chẩn đoán chính xác, người bệnh nên thăm khám tại bệnh viện chuyên khoa, nơi bác sĩ sẽ sử dụng công nghệ hiện đại như hệ thống Interacoustics để kiểm tra và xác định nguyên nhân gây ra tình trạng này.",
+    "link": "https://vnexpress.net/lam-the-nao-nhan-biet-roi-loan-tien-dinh-4860719.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Làm thế nào để nhận biết rối loạn tiền đình?",
+    "answers": [
+      {
+        "text": "Đi khám tại bệnh viện chuyên khoa Tai Mũi Họng hoặc Thần kinh.",
+        "correct": true
+      },
+      {
+        "text": "Uống thuốc tự điều trị tại nhà.",
+        "correct": false
+      },
+      {
+        "text": "Thực hiện bài tập thể dục hàng ngày.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ cần nghỉ ngơi và không làm gì cả.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Áp lực học khiến nữ sinh 14 tuổi trầm cảm",
     "content": "Bài viết đề cập đến trường hợp một nữ sinh 14 tuổi ở Hà Nội, bị trầm cảm do áp lực học tập và kỳ vọng từ gia đình. Cô bé cảm thấy chán nản, lo lắng về thành tích học tập và thường xuyên có ý tưởng tự sát. Các bác sĩ cho biết tình trạng trầm cảm ở lứa tuổi vị thành niên đang gia tăng, đặc biệt là ở những học sinh xuất sắc. Bài viết cũng khuyến cáo gia đình cần quan tâm, lắng nghe và tạo môi trường an toàn cho trẻ để giảm bớt áp lực.",
     "link": "https://vnexpress.net/ap-luc-hoc-khien-nu-sinh-14-tuoi-tram-cam-4860665.html",
@@ -2943,33 +3001,6 @@
       },
       {
         "text": "Vì thích chơi game hơn học",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Làm thế nào nhận biết rối loạn tiền đình?",
-    "content": "Rối loạn tiền đình là tình trạng liên quan đến thăng bằng, gây ra triệu chứng như choáng váng, hoa mắt. Các triệu chứng này có thể là dấu hiệu của nhiều bệnh khác nhau, bao gồm tim mạch và stress. Để chẩn đoán chính xác, người bệnh nên thăm khám tại bệnh viện chuyên khoa, nơi bác sĩ sẽ sử dụng công nghệ hiện đại như hệ thống Interacoustics để kiểm tra và xác định nguyên nhân gây ra tình trạng này.",
-    "link": "https://vnexpress.net/lam-the-nao-nhan-biet-roi-loan-tien-dinh-4860719.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Làm thế nào để nhận biết rối loạn tiền đình?",
-    "answers": [
-      {
-        "text": "Đi khám tại bệnh viện chuyên khoa Tai Mũi Họng hoặc Thần kinh.",
-        "correct": true
-      },
-      {
-        "text": "Uống thuốc tự điều trị tại nhà.",
-        "correct": false
-      },
-      {
-        "text": "Thực hiện bài tập thể dục hàng ngày.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ cần nghỉ ngơi và không làm gì cả.",
         "correct": false
       }
     ]
