--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -471,6 +471,33 @@
     */
     const newsData = [
   {
+    "title": "Antony ghi bàn, lập cú đúp kiến tạo ở Conference League",
+    "content": "Trong trận lượt về vòng 1/8 Conference League, Antony đã có màn trình diễn xuất sắc giúp Real Betis đánh bại Guimaraes 4-0. Anh ghi một bàn và có hai pha kiến tạo, góp phần vào chiến thắng chung cuộc 6-2 của Betis. Antony đã thể hiện khả năng chơi bóng ấn tượng, với bốn bàn thắng và năm pha kiến tạo sau 10 trận cho Betis.",
+    "link": "https://vnexpress.net/antony-ghi-ban-lap-cu-dup-kien-tao-o-conference-league-4861096.html",
+    "cat": "the-thao",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Antony đã ghi bao nhiêu bàn và kiến tạo bao nhiêu lần trong trận đấu với Guimaraes?",
+    "answers": [
+      {
+        "text": "1 bàn và 2 kiến tạo",
+        "correct": true
+      },
+      {
+        "text": "2 bàn và 1 kiến tạo",
+        "correct": false
+      },
+      {
+        "text": "3 bàn và 1 kiến tạo",
+        "correct": false
+      },
+      {
+        "text": "0 bàn và 3 kiến tạo",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Người đàn ông cả đời khát khao tìm gia đình",
     "content": "Nguyễn Tấn Tiên, một người đàn ông 57 tuổi ở Gia Lai, đã dành cả đời để tìm kiếm gia đình thất lạc của mình sau khi bị tách rời trong cuộc chiến năm 1975. Ông cùng vợ đã đi khắp nơi để tìm mẹ và ba người em của mình nhưng không có kết quả. Gần đây, ông gặp một người phụ nữ tên Kpắh Djrim, người có thể là em gái của ông, nhưng kết quả xét nghiệm ADN cho thấy họ không có quan hệ huyết thống. Dù niềm hy vọng đã tắt, ông Tiên vẫn tiếp tục hành trình tìm kiếm gia đình của mình.",
     "link": "https://vnexpress.net/nguoi-dan-ong-ca-doi-khat-khao-tim-gia-dinh-4859272.html",
@@ -493,6 +520,37 @@
       },
       {
         "text": "Một người bạn mới",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "'Quả bom' dân số già của Malaysia",
+    "content": "Malaysia đang đối mặt với vấn đề dân số già hóa khi tỷ lệ người từ 65 tuổi trở lên đã đạt 8,1% vào năm ngoái và có thể lên tới 14,5% vào năm 2040, sớm hơn dự báo. Điều này đặt ra thách thức lớn về nhu cầu chăm sóc người cao tuổi, khi mà số lượng người đang chăm sóc họ ngày càng giảm, trong khi cơ sở hạ tầng y tế và hỗ trợ xã hội lại không đủ đáp ứng. Các chuyên gia cảnh báo rằng nếu không có sự chuẩn bị và thay đổi chính sách kịp thời, tình trạng này sẽ trở nên nghiêm trọng hơn trong tương lai.",
+    "link": "https://vnexpress.net/qua-bom-dan-so-gia-cua-malaysia-4860748.html",
+    "cat": "suc-khoe",
+    "positivity": 4,
+    "importance": 9,
+    "question": "Malaysia đang phải đối mặt với vấn đề gì liên quan đến dân số?",
+    "answers": [
+      {
+        "text": "Già hóa dân số",
+        "correct": true
+      },
+      {
+        "text": "Tỷ lệ sinh tăng",
+        "correct": false
+      },
+      {
+        "text": "Thiếu lao động trẻ",
+        "correct": false
+      },
+      {
+        "text": "Gia tăng tỷ lệ thất nghiệp",
+        "correct": false
+      },
+      {
+        "text": "Chăm sóc trẻ em",
         "correct": false
       }
     ]
@@ -574,37 +632,6 @@
       },
       {
         "text": "Kiểm soát hoàn toàn mọi hoạt động của trẻ",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "'Quả bom' dân số già của Malaysia",
-    "content": "Malaysia đang đối mặt với vấn đề dân số già hóa khi tỷ lệ người từ 65 tuổi trở lên đã đạt 8,1% vào năm ngoái và có thể lên tới 14,5% vào năm 2040, sớm hơn dự báo. Điều này đặt ra thách thức lớn về nhu cầu chăm sóc người cao tuổi, khi mà số lượng người đang chăm sóc họ ngày càng giảm, trong khi cơ sở hạ tầng y tế và hỗ trợ xã hội lại không đủ đáp ứng. Các chuyên gia cảnh báo rằng nếu không có sự chuẩn bị và thay đổi chính sách kịp thời, tình trạng này sẽ trở nên nghiêm trọng hơn trong tương lai.",
-    "link": "https://vnexpress.net/qua-bom-dan-so-gia-cua-malaysia-4860748.html",
-    "cat": "suc-khoe",
-    "positivity": 4,
-    "importance": 9,
-    "question": "Malaysia đang phải đối mặt với vấn đề gì liên quan đến dân số?",
-    "answers": [
-      {
-        "text": "Già hóa dân số",
-        "correct": true
-      },
-      {
-        "text": "Tỷ lệ sinh tăng",
-        "correct": false
-      },
-      {
-        "text": "Thiếu lao động trẻ",
-        "correct": false
-      },
-      {
-        "text": "Gia tăng tỷ lệ thất nghiệp",
-        "correct": false
-      },
-      {
-        "text": "Chăm sóc trẻ em",
         "correct": false
       }
     ]
@@ -780,33 +807,6 @@
     ]
   },
   {
-    "title": "Đầu tư gần 7.000 tỷ đồng làm đường nối cao tốc với Phan Thiết",
-    "content": "Dự án đường kết nối cao tốc Bắc Nam đến trung tâm Phan Thiết dài 11,4 km với tổng vốn gần 7.000 tỷ đồng đã được phê duyệt. Tuyến đường này sẽ giúp mở rộng không gian phát triển cho đô thị biển Phan Thiết, tạo thuận lợi cho giao thông và kết nối với các khu vực lân cận. Dự kiến, dự án sẽ khởi công vào giữa năm 2027 và hoàn thành vào quý 4/2028, góp phần quan trọng trong việc phát triển hạ tầng giao thông tại Bình Thuận.",
-    "link": "https://vnexpress.net/dau-tu-gan-7-000-ty-dong-lam-duong-noi-cao-toc-voi-phan-thiet-4861016.html",
-    "cat": "thoi-su",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Dự án đường nối cao tốc với Phan Thiết có tổng vốn đầu tư bao nhiêu?",
-    "answers": [
-      {
-        "text": "Gần 7.000 tỷ đồng",
-        "correct": true
-      },
-      {
-        "text": "Trên 5.000 tỷ đồng",
-        "correct": false
-      },
-      {
-        "text": "Dưới 6.000 tỷ đồng",
-        "correct": false
-      },
-      {
-        "text": "Khoảng 10.000 tỷ đồng",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Làng du lịch sinh thái Pơ mu xuống cấp",
     "content": "Làng du lịch sinh thái Pơ Mu, nằm ở huyện Tây Giang, Quảng Nam, hiện đang trong tình trạng xuống cấp nghiêm trọng. Mặc dù được xây dựng từ năm 2016 với 10 ngôi nhà sàn truyền thống nhằm phát triển du lịch cộng đồng, nhưng sau gần 10 năm, các ngôi nhà đã hư hỏng, không có người trông coi và không còn hoạt động. Dự án nâng cấp và cải tạo làng du lịch này đã được phê duyệt với kinh phí hơn 6 tỷ đồng, dự kiến hoàn thành vào năm 2026.",
     "link": "https://vnexpress.net/lang-du-lich-sinh-thai-po-mu-xuong-cap-4860923.html",
@@ -829,6 +829,33 @@
       },
       {
         "text": "Do không có khách du lịch đến thăm.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Đầu tư gần 7.000 tỷ đồng làm đường nối cao tốc với Phan Thiết",
+    "content": "Dự án đường kết nối cao tốc Bắc Nam đến trung tâm Phan Thiết dài 11,4 km với tổng vốn gần 7.000 tỷ đồng đã được phê duyệt. Tuyến đường này sẽ giúp mở rộng không gian phát triển cho đô thị biển Phan Thiết, tạo thuận lợi cho giao thông và kết nối với các khu vực lân cận. Dự kiến, dự án sẽ khởi công vào giữa năm 2027 và hoàn thành vào quý 4/2028, góp phần quan trọng trong việc phát triển hạ tầng giao thông tại Bình Thuận.",
+    "link": "https://vnexpress.net/dau-tu-gan-7-000-ty-dong-lam-duong-noi-cao-toc-voi-phan-thiet-4861016.html",
+    "cat": "thoi-su",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Dự án đường nối cao tốc với Phan Thiết có tổng vốn đầu tư bao nhiêu?",
+    "answers": [
+      {
+        "text": "Gần 7.000 tỷ đồng",
+        "correct": true
+      },
+      {
+        "text": "Trên 5.000 tỷ đồng",
+        "correct": false
+      },
+      {
+        "text": "Dưới 6.000 tỷ đồng",
+        "correct": false
+      },
+      {
+        "text": "Khoảng 10.000 tỷ đồng",
         "correct": false
       }
     ]
@@ -1507,60 +1534,6 @@
     ]
   },
   {
-    "title": "Hiểu nhầm về tiêm vaccine HPV cho nữ giới",
-    "content": "Bài viết làm rõ những hiểu nhầm phổ biến về tiêm vaccine HPV cho nữ giới. Nhiều người cho rằng chỉ cần quan hệ chung thủy hoặc đã nhiễm HPV thì không cần tiêm phòng, nhưng thực tế virus HPV có thể lây qua nhiều cách và có nhiều chủng khác nhau. Bác sĩ khuyến cáo rằng việc tiêm vaccine HPV là rất quan trọng để phòng ngừa các bệnh liên quan và nên được thực hiện càng sớm càng tốt, đặc biệt cho nữ giới từ 27 tuổi trở lên.",
-    "link": "https://vnexpress.net/hieu-nham-ve-tiem-vaccine-hpv-cho-nu-gioi-4860700.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Tại sao nữ giới nên tiêm vaccine HPV?",
-    "answers": [
-      {
-        "text": "Để phòng ngừa nhiễm virus HPV và các bệnh liên quan.",
-        "correct": true
-      },
-      {
-        "text": "Vì tiêm vaccine là bắt buộc.",
-        "correct": false
-      },
-      {
-        "text": "Để giảm cân.",
-        "correct": false
-      },
-      {
-        "text": "Vaccine HPV chỉ dành cho nam giới.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Mặt mưng mủ sau cấy mỡ tạo 'má baby'",
-    "content": "Một phụ nữ 35 tuổi đã gặp phải tình trạng nhiễm trùng và mủ sau khi cấy mỡ tự thân vào má tại một spa. Các bác sĩ tại Bệnh viện Bạch Mai đã chẩn đoán và điều trị bằng kháng sinh cùng với việc dẫn lưu dịch mủ. Cơ sở y tế khuyến cáo mọi người chỉ nên thực hiện các thủ thuật thẩm mỹ tại những nơi được cấp phép để tránh nguy cơ biến chứng nguy hiểm.",
-    "link": "https://vnexpress.net/mat-mung-mu-sau-cay-mo-tao-ma-baby-4860892.html",
-    "cat": "suc-khoe",
-    "positivity": 3,
-    "importance": 7,
-    "question": "Tại sao người phụ nữ 35 tuổi phải nhập viện sau khi cấy mỡ?",
-    "answers": [
-      {
-        "text": "Vì bị nhiễm trùng và xuất hiện mủ dưới da.",
-        "correct": true
-      },
-      {
-        "text": "Vì gặp phải dị ứng với thuốc gây mê.",
-        "correct": false
-      },
-      {
-        "text": "Vì không thích kết quả thẩm mỹ.",
-        "correct": false
-      },
-      {
-        "text": "Vì cần phải nghỉ ngơi sau khi làm đẹp.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Người suy thận độ 3, 4 nên ăn uống thế nào?",
     "content": "Bài viết cung cấp thông tin về chế độ dinh dưỡng cho người suy thận độ 3 và 4, nhấn mạnh rằng chế độ ăn uống của hai bệnh nhân này cần được điều chỉnh khác nhau. Người suy thận độ 3 có thể ăn uống thoải mái hơn, nhưng vẫn cần giảm đạm, muối và theo dõi sức khỏe. Ngược lại, người suy thận độ 4 cần tuân thủ chế độ ăn nghiêm ngặt hơn, bao gồm kiêng khem nhiều thực phẩm chứa kali và nước để tránh tình trạng nguy hiểm như tăng kali máu.",
     "link": "https://vnexpress.net/nguoi-suy-than-do-3-4-nen-an-uong-the-nao-4860941.html",
@@ -1588,6 +1561,33 @@
     ]
   },
   {
+    "title": "Hiểu nhầm về tiêm vaccine HPV cho nữ giới",
+    "content": "Bài viết làm rõ những hiểu nhầm phổ biến về tiêm vaccine HPV cho nữ giới. Nhiều người cho rằng chỉ cần quan hệ chung thủy hoặc đã nhiễm HPV thì không cần tiêm phòng, nhưng thực tế virus HPV có thể lây qua nhiều cách và có nhiều chủng khác nhau. Bác sĩ khuyến cáo rằng việc tiêm vaccine HPV là rất quan trọng để phòng ngừa các bệnh liên quan và nên được thực hiện càng sớm càng tốt, đặc biệt cho nữ giới từ 27 tuổi trở lên.",
+    "link": "https://vnexpress.net/hieu-nham-ve-tiem-vaccine-hpv-cho-nu-gioi-4860700.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Tại sao nữ giới nên tiêm vaccine HPV?",
+    "answers": [
+      {
+        "text": "Để phòng ngừa nhiễm virus HPV và các bệnh liên quan.",
+        "correct": true
+      },
+      {
+        "text": "Vì tiêm vaccine là bắt buộc.",
+        "correct": false
+      },
+      {
+        "text": "Để giảm cân.",
+        "correct": false
+      },
+      {
+        "text": "Vaccine HPV chỉ dành cho nam giới.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "4 dưỡng chất tăng miễn dịch trẻ nên ăn mỗi ngày",
     "content": "Bài viết nêu bật bốn dưỡng chất quan trọng giúp tăng cường hệ miễn dịch cho trẻ, bao gồm kẽm, vitamin C, chất chống oxy hóa và axit béo omega-3. Những dưỡng chất này giúp trẻ phát triển tốt, giảm nguy cơ mắc bệnh, đặc biệt là khi thời tiết thay đổi. Cha mẹ được khuyến khích cho trẻ ăn đa dạng thực phẩm chứa các chất dinh dưỡng này để hỗ trợ sức khỏe và đề kháng của trẻ.",
     "link": "https://vnexpress.net/4-duong-chat-tang-mien-dich-tre-nen-an-moi-ngay-4860801.html",
@@ -1610,6 +1610,33 @@
       },
       {
         "text": "Chất béo bão hòa, cholesterol, đường tinh luyện",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Mặt mưng mủ sau cấy mỡ tạo 'má baby'",
+    "content": "Một phụ nữ 35 tuổi đã gặp phải tình trạng nhiễm trùng và mủ sau khi cấy mỡ tự thân vào má tại một spa. Các bác sĩ tại Bệnh viện Bạch Mai đã chẩn đoán và điều trị bằng kháng sinh cùng với việc dẫn lưu dịch mủ. Cơ sở y tế khuyến cáo mọi người chỉ nên thực hiện các thủ thuật thẩm mỹ tại những nơi được cấp phép để tránh nguy cơ biến chứng nguy hiểm.",
+    "link": "https://vnexpress.net/mat-mung-mu-sau-cay-mo-tao-ma-baby-4860892.html",
+    "cat": "suc-khoe",
+    "positivity": 3,
+    "importance": 7,
+    "question": "Tại sao người phụ nữ 35 tuổi phải nhập viện sau khi cấy mỡ?",
+    "answers": [
+      {
+        "text": "Vì bị nhiễm trùng và xuất hiện mủ dưới da.",
+        "correct": true
+      },
+      {
+        "text": "Vì gặp phải dị ứng với thuốc gây mê.",
+        "correct": false
+      },
+      {
+        "text": "Vì không thích kết quả thẩm mỹ.",
+        "correct": false
+      },
+      {
+        "text": "Vì cần phải nghỉ ngơi sau khi làm đẹp.",
         "correct": false
       }
     ]
